Texture paint brush shortcuts no longer working #43937

Closed
opened 2015-03-09 02:23:37 +01:00 by WK Bong · 8 comments

System Information
Win8.1 64bit GTX 980
Win7 64bit GTX560ti

Blender Version
Broken: 2.73.9 b4fccce
Working: 2.73a

Short description of error
Number keys can be used to switch between brushes quickly.
Now it no longer working.

Exact steps for others to reproduce the error
Rename a brush to "1 hard" and another "2 soft"
Press number key 1 and 2 to switch between them.

**System Information** Win8.1 64bit GTX 980 Win7 64bit GTX560ti **Blender Version** Broken: 2.73.9 b4fccce Working: 2.73a **Short description of error** Number keys can be used to switch between brushes quickly. Now it no longer working. **Exact steps for others to reproduce the error** Rename a brush to "1 hard" and another "2 soft" Press number key 1 and 2 to switch between them.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WeeKwongBong

Added subscriber: @WeeKwongBong
Author

Update: Shortcut working, but UI not updating. Errr.

Update: Shortcut working, but UI not updating. Errr.
Julian Eisel self-assigned this 2015-03-09 02:32:23 +01:00
Member

Can look into it tomorrow

Can look into it tomorrow
Author

Thanks.

I was painting in full screen.
I was pressing the number keys from 1 to 0, only noticed brush changed via the brush texture in Properties window.

Thanks. I was painting in full screen. I was pressing the number keys from 1 to 0, only noticed brush changed via the brush texture in Properties window.

This issue was referenced by b14e2876a7

This issue was referenced by b14e2876a759470df30002d98fe28176ac1a3836
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit b14e2876a7.

Closed by commit b14e2876a7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43937
No description provided.