Fix T43937: Changing Texture Brush doesn't update toolbar